syntax = "proto3";

option go_package="internal/pb";

service Product {
  rpc GetProduct(ProductRequest) returns (ProductResponse);
  rpc GetProducts(Empty) returns (stream ProductResponse);
}

message ProductRequest {
  string id = 1;
}

message Empty {}

message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
}